# djt_csp

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
djt_csp/: __init__.py  checkers.py  csp_analyzis.py  page_data.py  panel.py
djt_csp/templates/debug/: security_panel.html  validator.html
tests_djt_csp/: __init__.py  settings.py  test_parse_csp.py
